--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,10 +1,37 @@
 @use "../../styles/global" as *;
 @use "../../styles/mixins" as *;
 @use "../../styles/variables" as *;
+@use "../../styles/typography" as *;
 
 .footer {
   background-color: $background-light;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 5rem;
+
+  @media screen and (min-width: $breakpoint-desktop) {
+    height: 6rem;
+  }
+
+  &__copyright {
+    font-family: $font-regular;
+    color: $slate;
+    width: 9.8125rem;
+    height: 1rem;
+    font-size: 0.6875rem;
+    line-height: 1rem;
+    text-align: center;
+    font-weight: 400;
+
+    @media screen and (min-width: $breakpoint-tablet) {
+      color: $slate;
+      width: 10.6875rem;
+      height: 1rem;
+      font-size: 0.75rem;
+      line-height: 1.125rem;
+    }
+  }
 }
