--- a/client/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/client/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -1,7 +1,7 @@
-@use "../../styles/typography" as *;
-@use "../../styles/variables" as *;
-@use "../../styles/mixins" as *;
-@use "../../styles/global" as *;
+// @use "../../styles/typography" as *;
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/global" as *;
 
 .warehouse-details {
   display: flex;
