--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
 
 @font-face {
-  font-family: titillium-web-semi-bold;
-  src: url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+  font-family: "Titillium Web Semi Bold";
+  src: url("../assets/fonts/TitilliumWeb-SemiBold.ttf");
 }
 
 @font-face {
-  font-family: titillium-web-regular;
-  src: url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap');
+  font-family: "Titillium Web Regular";
+  src: url("../assets/fonts/TitilliumWeb-Regular.ttf");
 }
-
-
