--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -18,8 +18,8 @@ $in-stock: #158463;
 $out-of-stock: #c94515;
 
 //fonts
-$font-regular: titillium-web-regular, sans-serif;
-$font-semi: titillium-web-semi-bold, sans-serif;
+$font-regular: titillium-web-regular;
+$font-semi: titillium-web-semi-bold;
 
 //breakpoints
 $breakpoint-tablet: 768px;
