--- a/client/src/styles/partials/_typography.scss
+++ b/client/src/styles/partials/_typography.scss
@@ -1,12 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
-
 @font-face {
-  font-family: titillium-web-semi-bold;
-  src: url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
+  font-family: titillium-web-regular;
+  src: url(../../assets/fonts/TitilliumWeb-Regular.ttf);
 }
 
 @font-face {
-  font-family: titillium-web-regular;
-  src: url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap");
+  font-family: titillium-web-semi-bold;
+  src: url(../../assets/fonts/TitilliumWeb-SemiBold.ttf);
 }
