--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -7,9 +7,24 @@
   flex-direction: column;
   width: 100%;
 
+  &__subhead {
+    font-size: 0.6875rem;
+    line-height: 1rem;
+    font-weight: 600;
+    color: $slate;
+  }
+
+  &__value {
+    font-size: 0.8125rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    color: $instock-black;
+  }
+
   &__chg-cont {
     display: flex;
     justify-content: space-between;
+    margin: 1rem;
   }
 
   &__delete-cont {
