--- a/client/src/components/InventoryList/InventoryList.scss
+++ b/client/src/components/InventoryList/InventoryList.scss
@@ -1,3 +1,24 @@
 @use "../../styles/partials/global" as *;
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
+
+.inventory-list {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+
+  &__head {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 1rem;
+
+    &--title {
+      font-size: 1.75rem;
+      line-height: 2.25rem;
+      font-weight: 600;
+      color: $instock-black;
+      text-align: left;
+    }
+  }
+}
