--- a/client/src/components/WarehouseListItem/WarehouseListItem.scss
+++ b/client/src/components/WarehouseListItem/WarehouseListItem.scss
@@ -10,12 +10,32 @@
   flex-wrap: wrap;
   border-top: 1px solid $cloud;
 
+  @include tablet {
+    flex-wrap: nowrap;
+    justify-content: space-around;
+  }
+
+  @include desktop {
+    &:hover {
+      background-color: rgba(46, 102, 230, 0.07);
+    }
+  }
+
   &__left {
     display: flex;
     flex-direction: column;
     width: 50%;
     padding: 1.5rem;
     padding-bottom: 0;
+
+    @include tablet {
+      width: 30%;
+      padding: 0;
+      margin: 1.5rem;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   &__right {
@@ -24,6 +44,16 @@
     width: 50%;
     padding: 1.5rem;
     padding-bottom: 0;
+    justify-content: center;
+
+    @include tablet {
+      width: 40%;
+      padding: 0;
+      margin: 1.5rem;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
+    }
   }
 
   &__title {
@@ -31,6 +61,10 @@
     font-size: 0.6875rem;
     color: $slate;
     width: fit-content;
+
+    @include tablet {
+      display: none;
+    }
   }
 
   &__name {
@@ -51,6 +85,10 @@
     margin: 0.5rem 0rem;
     margin-bottom: 1rem;
     max-width: 150px;
+
+    @include tablet {
+      max-width: 120px;
+    }
   }
 
   &__warehouse {
@@ -80,6 +118,12 @@
     width: 100%;
     margin: 1.5rem;
     margin-top: 0.75rem;
+
+    @include tablet {
+      width: fit-content;
+      align-items: center;
+      margin: 2rem;
+    }
   }
 
   &__delete {
@@ -91,6 +135,11 @@
 
     &:hover {
       cursor: pointer;
+    }
+
+    @include tablet {
+      margin: 0.5rem;
+      margin-left: 0rem;
     }
   }
 
