--- a/client/src/pages/Warehouses/Warehouses.scss
+++ b/client/src/pages/Warehouses/Warehouses.scss
@@ -3,16 +3,18 @@
 @use "../../styles/typography" as *;
 @use "../../styles/variables" as *;
 
-.header {
-  width: 100vw;
-  height: 20vh;
-  background-color: $instock-black;
-}
-
 .warehouses {
   width: 100vw;
-  height: 100vh;
   background-color: $background-light;
+  padding-bottom: 6rem;
+
+  @include tablet {
+    padding-bottom: 10rem;
+  }
+
+  @include desktop {
+    padding-bottom: 14rem;
+  }
 
   &__container {
     display: flex;
@@ -21,12 +23,36 @@
     background-color: white;
     margin: 0rem 1rem;
     border-radius: 0.25rem;
+    box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+
+    @include tablet {
+      margin: 0rem 2rem;
+    }
+
+    @include desktop {
+      margin: 0rem 8.125rem;
+    }
   }
 
   &__header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include tablet {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &-actions {
+      display: flex;
+      flex-direction: column;
+
+      @include tablet {
+        flex-direction: row;
+      }
+    }
   }
 
   &__title {
@@ -36,6 +62,10 @@
     line-height: 2.5rem;
     margin: 1.5rem;
     margin-top: 2rem;
+
+    @include tablet {
+      margin: 2rem;
+    }
   }
 
   &__search {
@@ -48,6 +78,10 @@
     background: url("../../assets/icons/search-24px.svg") 95% no-repeat;
     margin: 0rem 1.5rem;
     margin-bottom: 1rem;
+
+    @include tablet {
+      margin: 2rem 1rem;
+    }
   }
 
   &__button {
@@ -65,6 +99,12 @@
     &:hover {
       background-color: $background-dark;
       transition: 1s;
+    }
+
+    @include tablet {
+      width: 150px;
+      margin: 2rem;
+      margin-left: 0rem;
     }
   }
 }
