--- a/client/src/pages/AddWarehouse/AddWarehouse.scss
+++ b/client/src/pages/AddWarehouse/AddWarehouse.scss
@@ -56,6 +56,7 @@
       margin: 1.5rem 0;
       padding: 1rem 2rem;
       border-top: none;
+      flex-grow: 1;
     }
     &:last-of-type {
       @include mQ($breakpoint-tablet) {
