--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -6,12 +6,33 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  border-top: 1px solid $cloud;
+
+  &__info-section {
+    display: flex;
+    justify-content: space-around;
+
+    &--left {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-right: 1.5rem;
+    }
+
+    &--right {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-right: 2.5rem;
+    }
+  }
 
   &__subhead {
     font-size: 0.6875rem;
     line-height: 1rem;
     font-weight: 600;
     color: $slate;
+    text-align: left;
   }
 
   &__value {
@@ -19,6 +40,7 @@
     line-height: 1.25rem;
     font-weight: 400;
     color: $instock-black;
+    text-align: left;
   }
 
   &__chg-cont {
