--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,7 +1,6 @@
-@use "../../styles/global" as *;
-@use "../../styles/mixins" as *;
-@use "../../styles/variables" as *;
-@use "../../styles/typography" as *;
+@use "../../styles/partials/global" as *;
+@use "../../styles/partials/mixins" as *;
+@use "../../styles/partials/variables" as *;
 
 .footer {
   background-color: $background-light;
