--- a/client/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/client/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -6,4 +6,135 @@
 .warehouse-details {
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
+}
+
+.head {
+  display: flex;
+  margin: 1rem;
+  position: relative;
+
+  &__title {
+    font-size: 1.75rem;
+    line-height: 2.25rem;
+    font-weight: 600;
+    color: $instock-black;
+  }
+
+  &__back {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
+
+    @include mQ($breakpoint-tablet) {
+      margin-left: 2.25rem;
+    }
+
+    &--icon {
+      min-height: 100%;
+      min-width: 100%;
+    }
+  }
+
+  &__edit {
+    width: 2.25rem;
+    height: 2.25rem;
+    border-radius: 1.25rem;
+    background-color: $instock-indigo;
+    place-items: center center;
+    position: absolute;
+    right: 1rem;
+
+    @include mQ($breakpoint-tablet) {
+      margin-right: 2.25rem;
+      display: flex;
+      align-items: center;
+      width: 5.0625rem;
+      height: 2.375rem;
+      padding: 0.5rem, 1rem;
+    }
+
+    &--icon {
+      width: 1rem;
+      height: 1rem;
+      filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
+        brightness(102%) contrast(102%);
+      margin-top: 0.5rem;
+
+      @include mQ($breakpoint-tablet) {
+        height: 1.25rem;
+        width: 1.25rem;
+        left: 12.5%;
+        right: 12.5%;
+      }
+    }
+  }
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid $cloud;
+  padding-top: 0.5rem;
+  margin-top: 0.5rem;
+
+  @include mQ($breakpoint-tablet) {
+    flex-direction: row;
+    margin: 0.5rem 2.25rem;
+  }
+
+  &__subhead {
+    font-size: 0.6875rem;
+    line-height: 1rem;
+    font-weight: 600;
+    color: $slate;
+    text-transform: uppercase;
+    text-align: left;
+  }
+
+  &__value {
+    font-size: 0.8125rem;
+    line-height: 1.25rem;
+    font-weight: normal;
+    color: $instock-black;
+    text-align: left;
+
+    @include mQ($breakpoint-tablet) {
+      width: 8.875rem;
+    }
+  }
+
+  &__contact-cont {
+    display: flex;
+    flex-direction: row;
+    margin: 0.5rem 1rem;
+
+    @include mQ($breakpoint-tablet) {
+      width: 60%;
+      justify-content: space-around;
+    }
+  }
+
+  &__address-cont {
+    width: 50%;
+    flex-wrap: wrap;
+    margin: 0.5rem 1rem;
+
+    @include mQ($breakpoint-tablet) {
+      width: 40%;
+      border-right: 1px solid $cloud;
+      height: 3.5rem;
+    }
+  }
+
+  &__name-cont {
+    width: 50%;
+    flex-wrap: wrap;
+  }
+
+  &__info-cont {
+    width: 50%;
+    flex-wrap: wrap;
+  }
 }
