--- a/client/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/client/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -19,6 +19,11 @@
     line-height: 2.25rem;
     font-weight: 600;
     color: $instock-black;
+
+    @include mQ($breakpoint-tablet) {
+      font-size: 2rem;
+      line-height: 2.5rem;
+    }
   }
 
   &__back {
@@ -65,8 +70,21 @@
       @include mQ($breakpoint-tablet) {
         height: 1.25rem;
         width: 1.25rem;
-        left: 12.5%;
-        right: 12.5%;
+        margin-left: 0.75rem;
+        margin-bottom: 0.5rem;
+      }
+    }
+
+    &--txt {
+      visibility: hidden;
+
+      @include mQ($breakpoint-tablet) {
+        visibility: visible;
+        color: white;
+        font-size: 0.875rem;
+        line-height: 22px;
+        font-weight: 600;
+        margin-left: 0.25rem;
       }
     }
   }
@@ -91,6 +109,11 @@
     color: $slate;
     text-transform: uppercase;
     text-align: left;
+
+    @include mQ($breakpoint-tablet) {
+      font-size: 0.75rem;
+      line-height: 1.125rem;
+    }
   }
 
   &__value {
@@ -102,6 +125,8 @@
 
     @include mQ($breakpoint-tablet) {
       width: 8.875rem;
+      font-size: 0.875rem;
+      line-height: 1.375rem;
     }
   }
 
