--- a/client/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/client/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -63,8 +63,7 @@
     &--icon {
       width: 1rem;
       height: 1rem;
-      filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
-        brightness(102%) contrast(102%);
+      filter: brightness(0) invert(1);
       margin-top: 0.5rem;
 
       @include mQ($breakpoint-tablet) {
