--- a/client/src/components/InventoryList/InventoryList.scss
+++ b/client/src/components/InventoryList/InventoryList.scss
@@ -22,7 +22,7 @@
       font-weight: 600;
       color: $instock-black;
       text-align: left;
-      margin-bottom: 1rem;
+      margin: 1rem;
     }
   }
 
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    max-width: 100%;
+    min-width: 100%;
 
     &--input {
       max-width: 100%;
