--- a/client/src/components/WarehouseListItem/WarehouseListItem.scss
+++ b/client/src/components/WarehouseListItem/WarehouseListItem.scss
@@ -44,7 +44,7 @@
     width: 50%;
     padding: 1.5rem;
     padding-bottom: 0;
-    justify-content: center;
+    padding-left: 7vw;
 
     @include tablet {
       width: 40%;
@@ -73,6 +73,7 @@
   }
 
   &__section {
+    width: fit-content;
     text-align: start;
     font-size: 0.75rem;
     color: $slate;
