--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -131,4 +131,20 @@
     padding: 0 1rem;
     margin-left: 0.5rem;
   }
+
+  &__input-error {
+    font-size: 0.688rem;
+    line-height: 1.25rem;
+    display: flex;
+    align-items: center;
+    color: $out-of-stock;
+    padding-bottom: 1rem;
+    @include mQ($breakpoint-tablet) {
+      font-size: 0.75rem;
+    }
+  }
+
+  &__input-error-icon {
+    height: 1.5em;
+  }
 }
