--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -97,6 +97,15 @@
     color: $instock-black;
     text-align: left;
     margin-bottom: 0.25rem;
+    justify-content: center;
+
+    &--icon {
+      border: none;
+      margin: 0rem 0.25rem;
+      width: 1rem;
+      height: 1rem;
+      align-items: center;
+    }
 
     &--item {
       font-size: 0.8125rem;
@@ -137,7 +146,7 @@
   &__delete {
     width: 1.25rem;
     height: 1.5rem;
-    background-image: url("../../assets/Icons/delete_outline-24px.svg");
+    background-image: url("../../assets/icons/delete_outline-24px.svg");
     background-position: center;
     background-size: cover;
 
@@ -154,7 +163,7 @@
   &__edit {
     width: 1.25rem;
     height: 1.5rem;
-    background-image: url("../../assets/Icons/edit-24px.svg");
+    background-image: url("../../assets/icons/edit-24px.svg");
     background-position: center;
     background-size: cover;
 
