--- a/client/src/components/InventoryList/InventoryList.scss
+++ b/client/src/components/InventoryList/InventoryList.scss
@@ -79,7 +79,7 @@
     }
 
     &--left {
-      width: 33%;
+      width: 34%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -91,14 +91,14 @@
     }
 
     &--right {
-      width: 38%;
+      width: 39%;
       display: flex;
       flex-direction: row;
       justify-content: space-around;
     }
 
     &--actions {
-      width: 10%;
+      width: 11%;
       justify-content: flex-end;
       margin-right: 1rem;
 
@@ -114,6 +114,14 @@
       height: 1.125rem;
       margin: 0.5rem;
       text-align: start;
+      justify-content: center;
+    }
+
+    &--icon {
+      width: 1rem;
+      height: 1rem;
+      align-self: center;
+      justify-content: center;
     }
   }
 }
