--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -7,22 +7,51 @@
   background-color: white;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 2px;
+  @include mQ($breakpoint-tablet) {
+    margin: 0 2rem;
+    max-width: 63.75rem;
+  }
+  @include mQ($breakpoint-desktop) {
+    margin: 0 auto;
+  }
 
   &__header {
     display: flex;
     justify-content: center;
     padding: 1.5rem 0;
+    @include mQ($breakpoint-tablet) {
+      border-bottom: 1px solid $cloud;
+    }
   }
 
   &__title {
     font-size: 1.6rem;
     line-height: 2.25rem;
     padding-left: 0.25rem;
+    @include mQ($breakpoint-tablet) {
+      font-size: 2rem;
+      line-height: 2.5rem;
+    }
   }
 
+  &__flex-container {
+    @include mQ($breakpoint-tablet) {
+      display: flex;
+    }
+  }
   &__form-section {
     border-top: 1px solid $cloud;
     padding: 1rem;
+    @include mQ($breakpoint-tablet) {
+      width: 50%;
+      margin: 1.5rem 0;
+      padding: 1rem 2rem;
+      border-top: none;
+      &:last-of-type {
+        border-left: 1px solid $cloud;
+        border-top: none;
+      }
+    }
   }
 
   &__subtitle {
@@ -30,7 +59,12 @@
     line-height: 1.75rem;
     padding: 0.5rem 0;
     margin-bottom: 1.5rem;
+    @include mQ($breakpoint-tablet) {
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
   }
+
   &__form {
     text-align: left;
   }
@@ -39,6 +73,10 @@
     font-family: $font-semi;
     font-size: 0.813rem;
     line-height: 1.25rem;
+    @include mQ($breakpoint-tablet) {
+      font-size: 0.875rem;
+      line-height: 1.375rem;
+    }
     &--hidden {
       display: none;
     }
@@ -49,6 +87,13 @@
     font-size: 0.813rem;
     line-height: 1.25rem;
     margin-bottom: 1rem;
+    @include mQ($breakpoint-tablet) {
+      font-size: 0.875rem;
+      line-height: 1.375rem;
+    }
+    &--invalid {
+      border-color: $out-of-stock;
+    }
   }
 
   &__details-description {
@@ -59,12 +104,24 @@
     height: 120px;
     padding-top: 0.5rem;
     margin-bottom: 1rem;
+    @include mQ($breakpoint-tablet) {
+      height: 120px;
+      font-size: 0.875rem;
+      line-height: 1.375rem;
+    }
+    &--invalid {
+      border-color: $out-of-stock;
+    }
   }
 
   &__select {
     font-size: 0.813rem;
     line-height: 1.25rem;
     margin-bottom: 1rem;
+    @include mQ($breakpoint-tablet) {
+      font-size: 0.875rem;
+      line-height: 1.375rem;
+    }
   }
 
   &__radio-buttons {
@@ -98,12 +155,18 @@
     &--hidden {
       display: none;
     }
+    &--invalid {
+      border-color: $out-of-stock;
+    }
   }
 
   &__buttons {
     background-color: $background-light;
     display: flex;
     padding: 1rem;
+    @include mQ($breakpoint-tablet) {
+      justify-content: flex-end;
+    }
   }
 
   &__cancel {
@@ -117,6 +180,14 @@
     border: 1px solid $cloud;
     padding: 0 1rem;
     margin-right: 0.5rem;
+    @include mQ($breakpoint-tablet) {
+      height: 38px;
+      width: auto;
+    }
+    &:hover {
+      color: $instock-indigo;
+      border: 1px solid $instock-indigo;
+    }
   }
 
   &__add-button {
@@ -130,6 +201,13 @@
     color: white;
     padding: 0 1rem;
     margin-left: 0.5rem;
+    @include mQ($breakpoint-tablet) {
+      height: 38px;
+      width: auto;
+    }
+    &:hover {
+      background-color: $background-dark;
+    }
   }
 
   &__input-error {
