--- a/client/src/components/InventoryList/InventoryList.scss
+++ b/client/src/components/InventoryList/InventoryList.scss
@@ -78,6 +78,11 @@
       margin-top: 1rem;
     }
 
+    &--subsec {
+      display: flex;
+      flex-direction: row;
+    }
+
     &--left {
       width: 34%;
       display: flex;
