--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -7,10 +7,12 @@
   background-color: white;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 2px;
+
   @include mQ($breakpoint-tablet) {
     margin: 0 2rem;
     max-width: 63.75rem;
   }
+
   @include mQ($breakpoint-desktop) {
     margin: 0 auto;
   }
@@ -19,8 +21,11 @@
     display: flex;
     justify-content: center;
     padding: 1.5rem 0;
+
     @include mQ($breakpoint-tablet) {
       border-bottom: 1px solid $cloud;
+      justify-content: flex-start;
+      padding: 1.5rem 2rem;
     }
   }
 
@@ -28,6 +33,7 @@
     font-size: 1.6rem;
     line-height: 2.25rem;
     padding-left: 0.25rem;
+
     @include mQ($breakpoint-tablet) {
       font-size: 2rem;
       line-height: 2.5rem;
@@ -39,14 +45,17 @@
       display: flex;
     }
   }
+
   &__form-section {
     border-top: 1px solid $cloud;
     padding: 1rem;
+
     @include mQ($breakpoint-tablet) {
       width: 50%;
       margin: 1.5rem 0;
       padding: 1rem 2rem;
       border-top: none;
+
       &:last-of-type {
         border-left: 1px solid $cloud;
         border-top: none;
@@ -59,6 +68,7 @@
     line-height: 1.75rem;
     padding: 0.5rem 0;
     margin-bottom: 1.5rem;
+
     @include mQ($breakpoint-tablet) {
       font-size: 1.5rem;
       line-height: 2rem;
@@ -73,6 +83,7 @@
     font-family: $font-semi;
     font-size: 0.813rem;
     line-height: 1.25rem;
+
     @include mQ($breakpoint-tablet) {
       font-size: 0.875rem;
       line-height: 1.375rem;
@@ -87,6 +98,7 @@
     font-size: 0.813rem;
     line-height: 1.25rem;
     margin-bottom: 1rem;
+
     @include mQ($breakpoint-tablet) {
       font-size: 0.875rem;
       line-height: 1.375rem;
@@ -104,6 +116,7 @@
     height: 120px;
     padding-top: 0.5rem;
     margin-bottom: 1rem;
+
     @include mQ($breakpoint-tablet) {
       height: 120px;
       font-size: 0.875rem;
@@ -118,6 +131,7 @@
     font-size: 0.813rem;
     line-height: 1.25rem;
     margin-bottom: 1rem;
+
     @include mQ($breakpoint-tablet) {
       font-size: 0.875rem;
       line-height: 1.375rem;
@@ -129,12 +143,14 @@
     justify-content: flex-start;
     align-items: center;
   }
+
   &__radio-button-container {
     margin-bottom: 1rem;
     &:last-of-type {
       margin-left: 6rem;
     }
   }
+
   &__radio {
     margin-right: 0.25rem;
   }
@@ -152,9 +168,11 @@
     font-size: 0.813rem;
     line-height: 1.25rem;
     margin-bottom: 1rem;
+
     &--hidden {
       display: none;
     }
+
     &--invalid {
       border-color: $out-of-stock;
     }
@@ -164,6 +182,7 @@
     background-color: $background-light;
     display: flex;
     padding: 1rem;
+
     @include mQ($breakpoint-tablet) {
       justify-content: flex-end;
     }
@@ -180,10 +199,12 @@
     border: 1px solid $cloud;
     padding: 0 1rem;
     margin-right: 0.5rem;
+
     @include mQ($breakpoint-tablet) {
       height: 38px;
       width: auto;
     }
+
     &:hover {
       color: $instock-indigo;
       border: 1px solid $instock-indigo;
@@ -201,10 +222,12 @@
     color: white;
     padding: 0 1rem;
     margin-left: 0.5rem;
+
     @include mQ($breakpoint-tablet) {
       height: 38px;
       width: auto;
     }
+
     &:hover {
       background-color: $background-dark;
     }
@@ -217,6 +240,7 @@
     align-items: center;
     color: $out-of-stock;
     padding-bottom: 1rem;
+
     @include mQ($breakpoint-tablet) {
       font-size: 0.75rem;
     }
