--- a/client/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/client/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: column;
   margin-top: 1rem;
+  box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
+  border-radius: 3px;
+  margin: 0 2rem;
 }
 
 .head {
