add styling to pages so that they creep into the header.

--- a/client/src/components/InventoryList/InventoryList.scss
+++ b/client/src/components/InventoryList/InventoryList.scss
@@ -2,6 +2,11 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/variables" as *;
 
+body {
+  background: #f7f8f9;
+  position: relative;
+}
+
 .inventory-list {
   display: flex;
   flex-direction: column;
@@ -9,6 +14,12 @@
   margin: 0 1rem;
   border-radius: 0.1875rem;
   box-shadow: 0 0.125rem 0.3125rem rgba(19, 24, 44, 0.1);
+  background: white;
+  margin-top: -4rem;
+
+  @include mQ($breakpoint-tablet) {
+    margin-top: -5rem;
+  }
 
   &__head {
     display: flex;
