--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -12,6 +12,9 @@
   @media screen and (min-width: $breakpoint-tablet) {
     flex-wrap: nowrap;
     justify-content: space-around;
+    border: none;
+    border-bottom: 1px solid $cloud;
+    height: 5rem;
   }
 
   &__left {
