--- a/client/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/client/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -3,6 +3,10 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/global" as *;
 
+body {
+  background: #f7f8f9;
+}
+
 .warehouse-details {
   display: flex;
   flex-direction: column;
@@ -10,6 +14,13 @@
   box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
   border-radius: 3px;
   margin: 0 2rem;
+  background: white;
+
+  margin-top: -4rem;
+
+  @include mQ($breakpoint-tablet) {
+    margin-top: -5rem;
+  }
 }
 
 .head {
