--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -3,18 +3,20 @@
 @use "../../styles/partials/variables" as *;
 
 .add-inventory {
-  margin: 0 1.5rem;
+  margin: -4rem 1.5rem 0;
   background-color: white;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 2px;
 
   @include mQ($breakpoint-tablet) {
-    margin: 0 2rem;
+    margin: -5rem 2rem 0;
     max-width: 63.75rem;
+    height: 44rem;
   }
 
   @include mQ($breakpoint-desktop) {
     margin: 0 auto;
+    height: 37.875rem;
   }
 
   &__header {
@@ -113,12 +115,11 @@
     font-size: 0.813rem;
     line-height: 1.25rem;
     resize: none;
-    height: 120px;
+    height: 7.5rem;
     padding-top: 0.5rem;
     margin-bottom: 1rem;
 
     @include mQ($breakpoint-tablet) {
-      height: 120px;
       font-size: 0.875rem;
       line-height: 1.375rem;
     }
@@ -185,6 +186,7 @@
 
     @include mQ($breakpoint-tablet) {
       justify-content: flex-end;
+      height: 70px;
     }
   }
 
@@ -192,7 +194,7 @@
     width: 50%;
     font-size: 0.813rem;
     line-height: 1.25rem;
-    height: 36px;
+    height: 2.25rem;
     background-color: $white;
     border-radius: 20px;
     color: $slate;
@@ -201,7 +203,7 @@
     margin-right: 0.5rem;
 
     @include mQ($breakpoint-tablet) {
-      height: 38px;
+      height: 2.375rem;
       width: auto;
     }
 
@@ -215,7 +217,7 @@
     width: 50%;
     font-size: 0.813rem;
     line-height: 1.25rem;
-    height: 36px;
+    height: 2.25rem;
     background-color: $instock-indigo;
     border-radius: 20px;
     border: none;
@@ -224,7 +226,7 @@
     margin-left: 0.5rem;
 
     @include mQ($breakpoint-tablet) {
-      height: 38px;
+      height: 2.375rem;
       width: auto;
     }
 
