--- a/client/src/pages/ItemDetails/ItemDetails.scss
+++ b/client/src/pages/ItemDetails/ItemDetails.scss
@@ -1,3 +1,82 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/global" as *;
+
+.item-details {
+  margin: 0 1.5rem;
+  background-color: white;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  border-radius: 2px;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 1rem;
+    border-bottom: 1px solid $cloud;
+  }
+
+  &__title-container {
+    display: flex;
+  }
+
+  &__info-container {
+    padding: 1.5rem 1rem;
+  }
+  &__title {
+    padding-left: 0.5rem;
+  }
+
+  &__top-section {
+    text-align: left;
+  }
+
+  &__label {
+    font-size: 0.813rem;
+    line-height: 1.25rem;
+    margin-bottom: 0.5rem;
+    font-family: $font-semi;
+  }
+
+  &__text {
+  }
+
+  &__middle-section {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__bottom-section {
+    text-align: left;
+  }
+
+  &__value {
+    font-size: 0.8125rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    text-align: left;
+    margin-bottom: 0.25rem;
+    justify-content: center;
+    &--instock {
+      font-size: 0.6875rem;
+      font-weight: 600;
+      line-height: 1rem;
+      text-transform: uppercase;
+      color: $in-stock;
+      background: rgba(21, 132, 99, 0.07);
+      border-radius: 1.25rem;
+      width: 3.5rem;
+      text-align: center;
+    }
+    &--outstock {
+      font-size: 0.6875rem;
+      font-weight: 600;
+      line-height: 1rem;
+      text-transform: uppercase;
+      color: $out-of-stock;
+      background: rgba(201, 69, 21, 0.07);
+      border-radius: 1.25rem;
+      width: 4.5rem;
+      text-align: center;
+    }
+  }
+}
