--- a/client/src/pages/EditInventory/EditInventory.scss
+++ b/client/src/pages/EditInventory/EditInventory.scss
@@ -2,7 +2,6 @@
 @use "../../styles/partials/mixins/" as *;
 @use "../../styles/partials/variables" as *;
 
-
 .editInventory {
   height: 100vh;
   width: 100vw;
@@ -17,13 +16,12 @@
     margin: -1rem 1rem;
     border-radius: 0.25rem;
     box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
-    
 
     @include mQ($breakpoint-tablet) {
       margin: 0rem 2rem;
     }
 
-    @include mQ($breakpoint-desktop){
+    @include mQ($breakpoint-desktop) {
       margin: 0rem 10.5rem;
     }
   }
@@ -35,7 +33,7 @@
     z-index: 1;
     background-color: $white;
 
-    @include mQ($breakpoint-tablet){
+    @include mQ($breakpoint-tablet) {
       align-items: center;
       border-bottom: 1px solid $cloud;
     }
@@ -47,7 +45,7 @@
     margin: 1.5rem;
     margin-top: 2rem;
     align-self: center;
-    background: url('../../assets/Icons/arrow_back-24px.svg') no-repeat;
+    background: url("../../assets/icons/arrow_back-24px.svg") no-repeat;
     background-size: auto;
     background-position: center;
     padding: 1rem;
@@ -158,7 +156,7 @@
       margin: 0.25rem 1.5rem;
     }
     &--invalid {
-        border-color: $out-of-stock;
+      border-color: $out-of-stock;
     }
   }
 
@@ -176,19 +174,19 @@
     height: 6rem;
 
     &--invalid {
-        border-color: $out-of-stock;
+      border-color: $out-of-stock;
     }
   }
 
   &__status {
-      text-align: left;
-      margin: 0 0 1rem 1.5rem;
+    text-align: left;
+    margin: 0 0 1rem 1.5rem;
   }
 
   &__select {
     //   width: 100%;
-      margin: 0 1.5rem 0 1.5rem;
-      
+    margin: 0 1.5rem 0 1.5rem;
+
     // font-family: "Titillium Web Regular";
     // height: 2rem;
     // border: 1px solid $cloud;
@@ -200,7 +198,7 @@
     //   color: black;
     // }
     &--invalid {
-        border-color: $out-of-stock;
+      border-color: $out-of-stock;
     }
 
     @include mQ($breakpoint-tablet) {
