--- a/client/src/components/ItemCard/ItemCard.scss
+++ b/client/src/components/ItemCard/ItemCard.scss
@@ -62,7 +62,7 @@
   &__subsec {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    // width: 100%;
   }
 
   &__chg-cont {
@@ -110,7 +110,6 @@
 
     &--icon {
       border: none;
-      margin: 0rem 0.25rem;
       width: 1rem;
       height: 1rem;
       align-items: center;
