--- a/client/src/pages/AddInventory/AddInventory.scss
+++ b/client/src/pages/AddInventory/AddInventory.scss
@@ -3,18 +3,18 @@
 @use "../../styles/partials/variables" as *;
 
 .add-inventory {
-  margin: -4rem 1.5rem 0;
+  margin: -4rem 1.5rem 1rem;
   background-color: white;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 2px;
 
   @include mQ($breakpoint-tablet) {
-    margin: -5rem 2rem 0;
+    margin: -5rem 2rem 10rem;
     max-width: 63.75rem;
   }
 
   @include mQ($breakpoint-desktop) {
-    margin: -5rem auto 0;
+    margin: -5rem auto 10rem;
   }
 
   &__header {
