--- a/client/src/pages/AddWarehouse/AddWarehouse.scss
+++ b/client/src/pages/AddWarehouse/AddWarehouse.scss
@@ -6,16 +6,16 @@
   background-color: $background-dark;
 }
 .add-warehouse {
-  margin: 0 1rem;
+  margin: -4rem 1rem 2rem;
   background-color: white;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
   border-radius: 2px;
   @include mQ($breakpoint-tablet) {
-    margin: 0 2rem;
+    margin: -5rem 2rem 10rem;
+    max-width: 63.75rem;
   }
   @include mQ($breakpoint-desktop) {
-    max-width: 63.75rem;
-    margin: 0 auto;
+    margin: -5rem auto 10rem;
   }
 
   &__header {
@@ -119,7 +119,7 @@
       justify-content: flex-end;
     }
   }
-  
+
   &__cancel-button {
     width: 50%;
     font-size: 0.813rem;
